Fix portals on mobile

--- a/violet/src/scss/_portal.scss
+++ b/violet/src/scss/_portal.scss
@@ -6,6 +6,22 @@
     @include span-columns(4);
     @include omega(3n);
     text-align: center;
+
+    // iPhone 4/45 to iPhone 6
+    @media only screen
+    and (min-device-width: 320px)
+    and (max-device-width: 667px)
+    and (-webkit-min-device-pixel-ratio: 2) {
+      width: 100%;
+    }
+
+    // iPhone 6+
+    @media only screen
+    and (min-device-width: 414px)
+    and (max-device-width: 736px)
+    and (-webkit-min-device-pixel-ratio: 3) {
+      width: 100%;
+    }
     
     .item-heading {
       @extend .panel-heading;
@@ -22,6 +38,9 @@
     
     .item-content {
       @extend .panel-body;
+      .fa {
+        padding: 0;
+      }
     }
   }
 }
